force-app/src/objects/c2g__codaSelection__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpselectiondef</customHelpPage>
    <description>Stores the queries for selecting and filtering data (used in Mass Email, XL and Print Formatter)</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__SelectionDescription__c</fullName>
        <label>Selection Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SelectionHeaderObjectLabel__c</fullName>
        <label>Selection Header Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SelectionHeaderObject__c</fullName>
        <label>Selection Header Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SelectionLineItemObjectLabel__c</fullName>
        <label>Selection Line Item Object Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SelectionLineItemObject__c</fullName>
        <label>Selection Line Item Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Selection Definition</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__SelectionDescription__c</columns>
        <columns>c2g__SelectionHeaderObject__c</columns>
        <columns>c2g__SelectionLineItemObject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Selection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>